--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,44 +3,210 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-
 #posts-home{
 	
+
+	margin-top:20px;
+	font-family: 'Open Sans', sans-serif;
 	display: flex;
-	justify-content: space-evenly;
-	padding-top: 25px;
+	justify-content: space-around;
+	text-align:center;
+
 
 	.deewar-posts{
 		width: 50%;
-		border-right: 1px dashed #007effe0;
-		border-left: 1px dashed #007effe0;
+		height: 100%;
+		background-color:#fff9ae;
+		border-radius:10px ;
 
-		.new-post-form{
-			display: flex;
-			justify-content: center;
-			form{
-			display: flex;
-				flex-direction: column;
+
+		#create-post{
+
+			textarea{
+				color:black;
+				background-color:white;
+				width: 650px;
+				height: 100px;
+				font-size:30px;
+				}
+
+			#buttonpo{
+				width:400px;
+				height:40px;
+				letter-spacing:0.1em;
+				font-size:25px;
+				background-color:#001561;
+				color:white;
+				font-weight:bold;
+				text-transform:uppercase;
+				border-radius:10px;
+			}	
+		}
+		
+
+		#disp-post{
+			ul{
+				padding-left:0px;
 			}
-			
+
+			.posts-show{
+				width:90%;
+				margin:0 auto;
+				border:1px solid black;
+
+
+				.align-left{
+				text-align:left;
+				}
+
+				.email{
+				padding-top:5px;
+				padding-left:5px;
+				font-family:sans-serif;
+				font-weight:bold;
+				}
+
+				.content{
+					width:95%;
+					border:1px solid black;
+					border-radius:5px;
+					margin:0 auto;
+					background-color:#e9ffff;
+
+					
+
+				}
+
+				.like-left{
+					text-align:left;
+					margin-left:15.203px;
+				}
+
+				.del-right{
+					text-align:right;
+					margin-right:15.203px;
+				}
+				#deletepo{
+					background-color:#ff0e0e;
+					border-radius:10px;
+					width:100px;
+					height:40px;
+					text-align:center;
+					display:inline-block;
+					height:30px;
+					padding-top:9px;
+					text-decoration:none;
+					color:white;
+					font-weight:bold;
+					text-transform:uppercase;
+
+				}
+
+				#like{
+
+					align:right;
+					background-color:#57b900;
+					border-radius:10px;
+					width:100px;
+					height:40px;
+					text-align:center;
+					display:inline-block;
+					height:30px;
+					padding-top:9px;
+					text-decoration:none;
+					color:white;
+					font-weight:bold;
+					text-transform:uppercase;
+
+				}
+
+				#disp-comments{
+					width: 506px;
+					margin: 0 auto;
+					textarea{
+						color:black;
+						background-color:white;
+						width: 500px;
+						height: 80px;
+						font-size:20px;
+					}
+
+					#buttonco{
+						width:200px;
+						height:30px;
+						letter-spacing:0.1em;
+						font-size:15px;
+						background-color:#001561;
+						color:white;
+						font-weight:bold;
+						text-transform:uppercase;
+						border-radius:10px;
+					}
+
+					#disp-comments-inner{
+
+					border-radius:10px;
+					border:1px solid #001561;
+					background-color:white;
+						.content-comment{
+								width:95%;
+								border:1px solid black;
+								margin:0 auto;
+								background-color:#edff00;
+
+					}
+					#del-comment{
+
+							background-color:#ff0e0e;
+							margin-top:-5px;
+							border-radius:10px;
+							width:90px;
+							height:40px;
+							text-align:center;
+							display:inline-block;
+							text-decoration:none;
+							color:white;
+							font-weight:bold;
+							font-size:14px;
+							text-transform:uppercase;
+							margin-bottom:10px;
+
+					}
+
+
+
+					}
+					
+				}
+
+			}
+
+
 		}
 
-		.posts-list{
-			
+
+	}
+
+	.sidebars{
+		width: 20%;
+		height: 100vh;
+		background-color:#fff9ae;
+		border-radius:10px ;
+
+
+		h1{
+  		text-transform: uppercase;
+  		font-size:25px;
+		}
+		hr{
+		border-color:black;
+		border-width:0.5px;
+		width:75%;
 		}
 	}
 
+
+	ul{
+	list-style-type:none;
+	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
