--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,37 +3,35 @@
   <head>
     <title>Connecti</title>
     <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
   </head>
 
   <body>
-  	<div id="common-header">
-  		<div class='logo'>
-  			<img width="45" src="https://image.freepik.com/free-icon/reddit-logo_318-67806.jpg">
-  		</div>
+    <div id="common-header">
+      <div class='logo'>
+        <img width="50" src="http://icons.iconarchive.com/icons/icons8/windows-8/256/Messaging-Speech-Bubble-icon.png">
+        <div id="connecti">CONNECTi</div>
+      </div>
+      
+      <div class='auth-info-links'>
+        <% if user_signed_in? %>
+        <p><%= current_user.email %></p>
+        <p class="butts"><%= link_to "Sign Out",destroy_user_session_path,method: :delete %></p>
 
-  		<div class='auth-info-links'>
-  			<% if user_signed_in? %>
-  			<p><%= current_user.email %></p>
-  			<p><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></p>
+        <% else %>
 
-  			<% else %>
+        <p class="butts"><%= link_to "Sign In",new_user_session_path %></p>
+        <p class="butts"><%= link_to "Sign Up",new_user_registration_path %></p>
 
-  				<p><%= link_to "Sign In", new_user_session_path %></p>
-  				<p><%= link_to "Sign Up", new_user_registration_path %></p>
-  			<% end %>
-  		</div>
-  	</div>
-
-
+        <% end %>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
-
-
-
-
-
-
